<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_movie_details_video_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <!-- Video list caption -->
    <RelativeLayout
        android:id="@+id/rl_movie_details_video_list_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_movie_details_video_list_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_movie_details_video_list_caption"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@id/tv_movie_details_video_list_caption"
            android:layout_toStartOf="@id/tv_movie_details_video_list_caption"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/tv_movie_details_video_list_caption"
            android:layout_toEndOf="@id/tv_movie_details_video_list_caption"
            android:background="@android:color/darker_gray"/>

    </RelativeLayout>

    <!-- Video list loading indicator -->
    <ProgressBar
        android:id="@+id/pb_movie_details_video_list_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rl_movie_details_video_list_caption"
        android:visibility="gone"/>

    <!-- Video list loading error -->
    <TextView
        android:id="@+id/tv_movie_details_video_list_error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_movie_details_video_list_caption"
        android:text="@string/activity_movie_details_video_list_error_msg"
        android:gravity="center_horizontal"
        android:visibility="gone"/>

    <!-- Video list empty message -->
    <TextView
        android:id="@+id/tv_movie_details_video_list_empty_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_movie_details_video_list_caption"
        android:text="@string/activity_movie_details_video_list_empty_msg"
        android:gravity="center_horizontal"
        android:visibility="gone"/>

    <!-- Video list -->
    <LinearLayout
        android:id="@+id/ll_movie_details_video_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/rl_movie_details_video_list_caption"
        android:visibility="gone"/>

</RelativeLayout>
